commit c1e235bce90e551ec8f7b39e1538354c4ee677bd
Author: mb6ockatf <mdddmmmm@yandex.ru>
Date:   Sat Aug 10 20:52:40 2024 +0300

    refactor: migrate 2 autotools
    
    did some minor refactoring, too

commit c0de3ea60d8ab17e1ecfcc74b3f7b69bdc8b3ea0
Author: mb6ockatf <mdddmmmm@yandex.ru>
Date:   Sat Aug 10 16:05:10 2024 +0300

    chore(CONTRIBUTING): added

commit be862b3b68cc0e2de478c2f65d03ef13dfaac03a
Author: mb6ockatf <mdddmmmm@yandex.ru>
Date:   Fri Aug 9 20:53:46 2024 +0300

    chore(COPYING): AGPL

commit 6bd3d71d7149f0e62ca1f204266af74ed444db33
Author: mb6ockatf <mdddmmmm@yandex.ru>
Date:   Fri May 10 16:14:32 2024 +0300

    feat: initial commit